[gd_scene load_steps=10 format=3 uid="uid://weanipusdv4x"]

[ext_resource type="Texture2D" uid="uid://3k5r7d7oem87" path="res://scenes/ship.png" id="1_f085i"]
[ext_resource type="Script" path="res://scenes/player.gd" id="1_lhjf6"]
[ext_resource type="PackedScene" uid="uid://rbap3qlmlngn" path="res://scenes/player_bullet.tscn" id="2_16nsq"]
[ext_resource type="PackedScene" uid="uid://bu7qn3eyuhlsg" path="res://scenes/weapon.tscn" id="4_b38km"]
[ext_resource type="PackedScene" uid="uid://dwlop30tveww" path="res://components/health_component.tscn" id="5_aonfs"]
[ext_resource type="PackedScene" uid="uid://bxx4tapyl1oka" path="res://components/hurtbox_component.tscn" id="6_q3bxt"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hcj8q"]
size = Vector2(27, 42)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1fy7q"]
size = Vector2(27, 42)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x2aut"]
size = Vector2(28, 42)

[node name="Player" type="CharacterBody2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_lhjf6")
bullet_scene = ExtResource("2_16nsq")

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = 1.5708
scale = Vector2(2, 2)
texture = ExtResource("1_f085i")

[node name="WeaponLeft" parent="." instance=ExtResource("4_b38km")]
position = Vector2(11, -15)
bullet_scene = ExtResource("2_16nsq")

[node name="WeaponRight" parent="." instance=ExtResource("4_b38km")]
position = Vector2(11, 14)
bullet_scene = ExtResource("2_16nsq")

[node name="ShooterSpeed" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
autostart = true

[node name="HealthComponent" parent="." instance=ExtResource("5_aonfs")]

[node name="HurtboxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("6_q3bxt")]
collision_layer = 0
collision_mask = 4
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent"]
position = Vector2(-0.5, 0)
shape = SubResource("RectangleShape2D_hcj8q")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 0)
shape = SubResource("RectangleShape2D_1fy7q")

[node name="OwnerArea2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="OwnerArea2D"]
position = Vector2(-1, 0)
shape = SubResource("RectangleShape2D_x2aut")
